# tidemill

./: .env.example  .envrc  .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  index.html  init-db.sql  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  docs.yml  test.yml
architecture/api/: index.html
architecture/canonical-vocabulary/: index.html
architecture/connectors/: index.html
architecture/cubes/: index.html
architecture/database/: index.html
architecture/events/: index.html
architecture/example-queries/: index.html
architecture/expenses/: index.html
architecture/metrics/: index.html
architecture/overview/: index.html
architecture/reports/: index.html
architecture/segments/: index.html
backend/: __init__.py  analytics.py  database.py  main.py  models.py  requirements.txt  stripe_sync.py
bruno/: README.md
bruno/Metrics - MRR/: 11_components.bru
bruno/Metrics - Usage Revenue/: 01_total.bru  02_series.bru  03_by_customer.bru
definitions/: index.html
deploy/compose/: .env.example  Caddyfile  Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
deploy/domain/: .env.example  domain.sh
deploy/seed/: chargebee_seed.py  quickbooks_fixtures.json  quickbooks_seed.py  seed.sh  stripe_fixtures.json  stripe_seed.py
deploy/terraform/: .gitignore
deploy/terraform/domain/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/kubernetes/: .env.example  dns.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/single-server/: .env.example  cloud-init.yml  dns.tf  firewall.tf  outputs.tf  server.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
development/deployment/: index.html
development/development/: index.html
development/testing/: index.html
docs/: definitions.md  index.md  mkdocs.yml
docs/architecture/: api.md  canonical-vocabulary.md  connectors.md  cubes.md  database.md  deployment.md  events.md  example-queries.ipynb  expenses.md  metrics.md  overview.md  query-example.ipynb  reports.md  testing.md
docs/design-system/: design-system.html  tokens.css
docs/development/: deployment.md  development.md  testing.md
docs/notebooks/: 01_mrr.ipynb  02_churn.ipynb  03_retention.ipynb  04_ltv.ipynb  05_trials.ipynb
docs/research/: analytics-tools.md  billing-engines.md  business-models.md  competitive-matrix.md  market-overview.md  pricing-and-billing.md  product-positioning.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx  routes.tsx
frontend/src/api/: apiKeys.ts  auth.ts  client.ts  dashboards.ts  metrics.ts
frontend/src/components/: Dashboard.css  Dashboard.jsx  MetricChart.jsx  MetricsSummary.css  MetricsSummary.jsx
frontend/src/hooks/: useAuth.ts  useDashboards.ts  useMetrics.ts  useTimeRange.ts
frontend/src/lib/: chartTimeRange.ts  constants.ts  formatters.ts  mrrSeries.ts  periods.ts  types.ts
frontend/src/services/: api.js
notebooks/: 01_mrr.ipynb  02_churn.ipynb  03_retention.ipynb
notebooks/01_mrr/: index.html
notebooks/02_churn/: index.html
notebooks/03_retention/: index.html
notebooks/04_ltv/: index.html
notebooks/05_trials/: index.html
palette/: index.html
plan-segments/: index.html
research/analytics-tools/: index.html
research/billing-engines/: index.html
research/business-models/: index.html
research/competitive-matrix/: index.html
research/market-overview/: index.html
research/pricing-and-billing/: index.html
research/product-positioning/: index.html
scripts/: post-checkout-hook.sh  test-e2e.sh
search/: search_index.json
stylesheets/: plotly.css
subscriptions/: __init__.py  __main__.py  bus.py  database.py  engine.py  events.py  fx.py  models.py  state.py  worker.py
subscriptions/api/: app.py  deps.py  schemas.py
subscriptions/api/routers/: health.py  metrics.py  sources.py  webhooks.py
subscriptions/cli/: main.py
subscriptions/connectors/: __init__.py  base.py  registry.py  stripe.py
subscriptions/metrics/: __init__.py  base.py  query.py  registry.py
subscriptions/metrics/churn/: __init__.py  cubes.py  metric.py
subscriptions/metrics/mrr/: __init__.py  cubes.py  metric.py
subscriptions/metrics/retention/: __init__.py  cubes.py  metric.py
tests/: conftest.py  test_attributes.py  test_events.py  test_query_compilation.py  test_state.py  test_state_pg.py
tests/test_connectors/: test_base.py  test_chargebee.py  test_quickbooks.py  test_stripe.py
tests/test_metrics/: conftest.py  test_churn.py  test_churn_pg.py  test_expenses.py  test_ltv.py  test_mrr.py  test_mrr_pg.py  test_mrr_waterfall.py  test_query.py  test_retention.py  test_retention_pg.py  test_trials.py
tidemill/: _logging.py  config.py  database.py  dead_letter.py  migrate.py  models.py  models_auth.py  otel.py  state.py
tidemill/api/: app.py  deps.py  schemas.py
tidemill/api/routers/: api_keys.py  auth.py  dashboards.py  metrics.py
tidemill/attributes/: ingest.py
tidemill/cli/: main.py
tidemill/connectors/: __init__.py  base.py
tidemill/connectors/chargebee/: __init__.py  connector.py  routes.py
tidemill/connectors/quickbooks/: __init__.py  client.py  connector.py  routes.py
tidemill/connectors/stripe/: connector.py
tidemill/metrics/: __init__.py  base.py  query.py  registry.py
tidemill/metrics/churn/: cubes.py  metric.py  routes.py  tables.py
tidemill/metrics/expenses/: __init__.py  metric.py  routes.py
tidemill/metrics/ltv/: __init__.py  cubes.py  metric.py  routes.py  tables.py
tidemill/metrics/mrr/: cubes.py  metric.py  routes.py  tables.py  usage.py
tidemill/metrics/retention/: cubes.py  metric.py
tidemill/metrics/trials/: __init__.py  cubes.py  metric.py  routes.py  tables.py
tidemill/metrics/usage_revenue/: __init__.py  cubes.py  (+3 more)
tidemill/reports/: __init__.py  _style.py  churn.py  client.py  ltv.py  mrr.py  retention.py  trials.py  usage_revenue.py
tidemill/segments/: routes.py
(+28 files in other folders)
