[project]
name = "subscriptions"
version = "0.1.0"
description = "Open-source subscription analytics engine"
license = "MIT"
requires-python = ">=3.13"


dependencies = [
    "sqlalchemy>=2.0,<3",
    "stripe>=14.4.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiokafka>=0.12",
    "typer>=0.15",
    "pydantic>=2.10",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.uv]
exclude-newer = "14 days"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[project.scripts]
subs = "subscriptions.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "rich>=14.3.3",
    "sqlparse>=0.5.5",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires PostgreSQL (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"subscriptions/api/routers/*.py" = ["B008"]
"subscriptions/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["subscriptions"]

[[tool.mypy.overrides]]
module = ["subscriptions.metrics.mrr", "subscriptions.metrics.churn", "subscriptions.metrics.retention"]
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true
