[project]
name = "tidemill"
version = "0.1.0"
description = "Open-source subscription analytics engine"
license = "MIT"
requires-python = ">=3.13"


dependencies = [
    "sqlalchemy>=2.0,<3",
    "stripe>=14.4.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiokafka>=0.12",
    "typer>=0.15",
    "pydantic>=2.10",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.9",
    "sqlparse>=0.5",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = []
observability = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-aiokafka>=0.48b0",
]

[tool.uv]
exclude-newer = "14 days"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[project.scripts]
tidemill = "tidemill.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "ipykernel>=6.0",
    "matplotlib>=3.10.8",
    "plotly>=5.0",
    "mkdocs-jupyter>=0.25",
    "mkdocs-material>=9.6",
    "mypy>=1.13",
    "pandas>=3.0.1",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "rich>=14.3.3",
    "ruff>=0.8",
    "sqlparse>=0.5.5",
    "mkdocs-toggle-sidebar-plugin>=0.0.9",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires PostgreSQL (deselect with '-m not integration')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "D"]
ignore = [
    "D100",  # missing docstring in public module
    "D101",  # missing docstring in public class
    "D102",  # missing docstring in public method
    "D103",  # missing docstring in public function
    "D104",  # missing docstring in public package
    "D105",  # missing docstring in magic method
    "D106",  # missing docstring in public nested class
    "D107",  # missing docstring in __init__
    "TC006", # quote types in cast() — we prefer bare type expressions
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tidemill/api/routers/*.py" = ["B008", "TC001", "TC003"]
"tidemill/metrics/*/routes.py" = ["B008", "TC001", "TC003"]
"tidemill/metrics/route_helpers.py" = ["B008"]
"tidemill/connectors/*/routes.py" = ["B008", "TC003"]
"tidemill/cli/*.py" = ["B008"]
"tidemill/segments/routes.py" = ["B008", "TC001"]
"tidemill/attributes/routes.py" = ["B008", "TC001"]
# Styler is imported at runtime so cast(Styler, ...) works
"tidemill/reports/*.py" = ["TC002"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["tidemill"]

[[tool.mypy.overrides]]
module = ["tidemill.metrics.mrr", "tidemill.metrics.churn", "tidemill.metrics.retention", "tidemill.metrics.ltv", "tidemill.metrics.trials"]
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = ["jwt", "jwt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plotly", "plotly.graph_objects", "plotly.io", "plotly.subplots"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiokafka"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true
